<resources>
    <string name="app_name">Food</string>
    <string name="foodDescription">This is a sample food description , it should hav details about the particular food, tell us more about the food and the rest , below it is the price of the food</string>
    <string name="pricePlaceholder">Prriiice of the good</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_proceed_from_cart">Proceed to complete order</string>
    <string name="text_contiue_shopping"><u>Continue Shopping</u></string>
    <string name="btn_text_add_to_cart">add to cart</string>
    <string name="price_text">Price:</string>
    <string name="totalBill">Total Bill:</string>
    <string name="delivery_Address">Delivery Address</string>
    <string name="nearest_bus_stop">Nearest Bus Stop</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="hint_fullname">Enter your full name here</string>
    <string name="hint_email">Enter Your email address here</string>
    <string name="hint_delivery_address">Enter delivery address here</string>
    <string name="hint_nearest_bustop">Enter the nearest bus stop to you here </string>
    <string name="hint_phoneNumber">Enter your Phone number here</string>
    <string name="text_coupon_code">Coupon code (optional)</string>
    <string name="hint_coupon">Enter coupon code here</string>
    <string name="cart_Title">Cart</string>
    <string name="confirm_detail_frag_title">Confirm Details</string>
    <string name="enter_details_frag_title">Enter shipping details</string>
    <string name="main_activity_title">O\'s Kitchen</string>
    <string name="here_login"><u>Click HERE</u></string>
    <string name="login_text">Login</string>
    <string name="Register">Register</string>
    <string name="error_password_no_match">Password does not match</string>
    <string name="registerTitle">Register</string>
    <string name="registerCompleteMessage">Successfully Registered!, You can now Login</string>
    <string name="email_key">email key</string>
    <string name="password_key">password key</string>
    <string name="login_title">Login</string>
    <string name="pref_name">pref name</string>
</resources>
