<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jp.food.EnterDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/side_margin5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/side_margin10">
            <TextView
                android:layout_width="@dimen/text_view_width80"
                android:layout_height="@dimen/text_height_50"
                android:gravity="fill"
                android:textColor="@color/colorBlack"
                android:text="@string/full_name"
                android:textSize="@dimen/text_size_18"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idETfullname"
                android:hint="@string/hint_fullname"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/text_view_width80"
                android:textColor="@color/colorBlack"
                android:layout_height="@dimen/text_height_50"
                android:text="@string/email_address"
                android:textSize="@dimen/text_size_18"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idETemail"
                android:hint="@string/hint_email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/text_view_width80"
                android:textColor="@color/colorBlack"
                android:layout_height="@dimen/text_height_50"
                android:text="@string/delivery_Address"
                android:textSize="@dimen/text_size_18"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idETaddress"
                android:hint="@string/hint_delivery_address"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/text_view_width80"
                android:layout_height="@dimen/text_height_50"
                android:textColor="@color/colorBlack"
                android:text="@string/nearest_bus_stop"
                android:textSize="@dimen/text_size_18"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nearest_bustop"
                android:id="@+id/idETBusstop"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/side_margin10">
            <TextView
                android:layout_width="@dimen/text_view_width80"
                android:textColor="@color/colorBlack"
                android:layout_height="@dimen/text_height_50"
                android:textSize="@dimen/text_size_18"
                android:text="@string/phone_number"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idETphone"
                android:hint="@string/hint_phoneNumber"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/side_margin10">
            <TextView
                android:layout_width="@dimen/text_view_width80"
                android:layout_height="@dimen/text_view_width80"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_18"
                android:text="@string/text_coupon_code"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idETCoupon"
                android:hint="@string/hint_coupon"/>
        </LinearLayout>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="proceed"
    android:textColor="@color/colorWhite"
    android:background="@color/colorBlue"
    android:id="@+id/idBtnProceedEnter"/>
    </LinearLayout>
</FrameLayout>
