<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jp.food.ConfirmDetailsFragment">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idrecyclerViewConfirm"></android.support.v7.widget.RecyclerView>

        </android.support.v4.widget.NestedScrollView>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/side_margin5"
      android:orientation="horizontal">
      <TextView
          android:layout_width="@dimen/text_view_width80"
          android:layout_height="wrap_content"
          android:textColor="@color/colorBlue"
          android:text="@string/totalBill"/>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/idTVbillPrice"
      android:textColor="@color/colorBlack"
      android:layout_marginLeft="@dimen/side_margin5"/>
  </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/side_margin10"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_view_width80"
                    android:layout_height="@dimen/text_height35"
                    android:textColor="@color/colorBlue"
                    android:text="@string/delivery_Address"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/idTVdeliveryAddress"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/side_margin10"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_view_width80"
                    android:layout_height="@dimen/text_height35"
                    android:textColor="@color/colorBlue"
                    android:text="@string/nearest_bus_stop"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/idTVBusStop"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/side_margin10"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_view_width80"
                    android:layout_height="@dimen/text_height35"
                    android:text="@string/phone_number"
                    android:textColor="@color/colorBlue"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/idTVphoneNum"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/side_margin10"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_view_width80"
                    android:layout_height="@dimen/text_height35"
                    android:text="@string/full_name"
                        android:textColor="@color/colorBlue"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/idTVfullName"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/side_margin10"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_view_width80"
                    android:layout_height="@dimen/text_height35"
                    android:text="@string/email_address"
                    android:textColor="@color/colorBlue"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/idTVemail"

                    />
            </LinearLayout>

            <Button
                android:id="@+id/idbuttonProceede"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:text="Proceed to Payment"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlue"
                android:layout_gravity="end"
                android:textAllCaps="false" />


        </LinearLayout>


</LinearLayout>
